# public-transit-viewer

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  commitlint.config.cjs  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: frontend.instructions.md
.github/prompts/: commit-gate.prompt.md  implement-existing-story.prompt.md  new-feature-story-first.prompt.md  new-story.prompt.md
.github/workflows/: commitlint.yml  docker-ci.yml  docker-publish.yml  gh-pages.yml  poetry-ci.yml  poetry-publish.yml  quality-ci.yml  release-please.yml
.husky/: commit-msg  pre-commit
docs/stories/: INDEX.md  STORY-0001.md  STORY-0002.md  STORY-0003.md  STORY-0004.md  STORY-0005.md  STORY-0006.md  STORY-0007.md  STORY-0008.md  STORY-0009.md  STORY-0010.md  STORY-0011.md  STORY-0012.md  STORY-0013.md  STORY-0014.md  STORY-0015.md  STORY-0016.md  STORY-0017.md  STORY-0018.md  STORY-0019.md  STORY-0020.md  STORY-0021.md  STORY-0022.md  STORY-0023.md  STORY-0024.md  STORY-0025.md  STORY-0026.md  STORY-0027.md  STORY-0028.md  STORY-0029.md  STORY-0030.md  STORY-0031.md  STORY-0032.md  STORY-0033.md  STORY-0034.md  STORY-0035.md  STORY-0036.md  STORY-0037.md  STORY-0038.md  STORY-0039.md  (+15 more)
naviqore_client/: pyproject.toml
naviqore_client/naviqore_client/: client.py  models.py
naviqore_viewer/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
naviqore_viewer/naviqore_viewer/: __init__.py  client.py  connection.py  main.py  test.py  utils.py
naviqore_viewer/naviqore_viewer/components/: form_components.py
naviqore_viewer/naviqore_viewer/pages/: isolines.py
public/: env.js
public_transit_viewer/: __init__.py  client.py  connection.py  connections.py  entrypoint.py  main.py  utils.py
public_transit_viewer/components/: form_components.py  logo.py  map.py
public_transit_viewer/pages/: isolines.py
public_transit_viewer/utils/: asset.py  client.py  color.py  connection.py
src/: App.tsx  Providers.tsx  constants.ts  index.tsx  styles.css  types.ts
src/components/: AboutDialog.tsx  BenchmarkTab.test.tsx  BenchmarkTab.tsx  ExploreConfigDialog.tsx  Layout.css  Layout.tsx  Map.test.tsx  Map.tsx  QueryConfigDialog.tsx  SystemMonitorPanel.tsx  Toast.test.tsx  Toast.tsx
src/contexts/: BenchmarkContext.tsx  DomainContext.test.tsx  DomainContext.tsx  MonitoringContext.test.ts  MonitoringContext.tsx  SettingsContext.tsx
src/hooks/: useBenchmark.ts  useMapLayers.ts  useMediaQuery.ts  useStopSearch.ts
src/pages/: ConnectPage.test.tsx  ConnectPage.tsx  ExplorePage.test.tsx  ExplorePage.tsx  (+6 more)
tests/: test_entrypoint.py
(+36 files in other folders)
