[tool.poetry]
name = "public-transit-viewer"
version = "0.1.0"
description = "Viewer to interact with the public transit service."
authors = ["Lukas Connolly <lukas@connolly.ch>", "Merlin Unterfinger <info@munterfinger.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
pydantic = "^2.8.2"
streamlit = "^1.37.1"
streamlit-searchbox = "^0.1.14"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
public-transit-client = { path = "../public-transit-client", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
pandas-stubs = "^2.2.2.240807"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
