[tool.poetry]
name = "naviqore_client"
version = "0.1.0"
description = ""
authors = ["Lukas Connolly <lukas@connolly.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
pydantic = "^2.7.1"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
